--- a/packages/_presentation_layer/lib/src/l10n/app_pt.arb
+++ b/packages/_presentation_layer/lib/src/l10n/app_pt.arb
@@ -17,6 +17,6 @@
   "message_loading_with_yaml_conf": "Carregando projeto usando configuração yaml",
   "message_loading_without_yaml_conf": "Carregando project sem configuração yaml",
   "message_project_already_selected": "Projeto já selecionado",
-  "message_loading_stage": "{stage, select, initial{Carregando...} readingPubspec{Lendo pubspec.yaml} definingConfiguration{Definindo configuração} readingResourceDefinitions{Lendo definições...} readingTranslations{Lendo aquivos de tradução...} confirmingLoaded{Finalizando...} loaded{Configuração carregada.} error{Erro carregando configuração.} canceled{Carregamento cancelado.} other{Carregando...}}",
+  "message_loading_stage": "{stage, select, initial{Carregando...} readingPubspec{Lendo pubspec.yaml} definingConfiguration{Definindo configuração} readingResourceDefinitions{Lendo definições...} readingTranslations{Lendo aquivos de tradução...} savingToRecentProjects{Salvando na lista de recentes...} error{Erro carregando configuração.} canceled{Carregamento cancelado.} other{Carregando...}}",
   "message_no_project_selected": "Nenhum projeto selecionado"
 }
