--- a/packages/_presentation_layer/lib/src/l10n/app_en.arb
+++ b/packages/_presentation_layer/lib/src/l10n/app_en.arb
@@ -89,7 +89,7 @@
     }
   },
 
-  "label_add_placeholder": "Add Placeholder",
+  "label_new": "New",
 
   "label_save_placeholder": "Save Placeholder",
 
