--- a/packages/_presentation_layer/lib/src/l10n/app_en.arb
+++ b/packages/_presentation_layer/lib/src/l10n/app_en.arb
@@ -1,14 +1,28 @@
 {
   "@@locale": "en",
 
-  "test": "Testing with placeholders {jack} and {joe}",
-  "@test": {
+  "test_placeholders": "Testing with placeholders {jack} and {joe}",
+  "@test_placeholders": {
     "placeholders": {
       "jack": {
         "type": "DateTime",
         "format": "H"
       },
       "joe": {}
+    }
+  },
+
+  "test_plural": "Testing plurals: {count, plural, =0{no dogs} =1{a dog} =2{two dogs} few{few dogs} many{many dogs} other{a number of dogs}",
+  "@test_plural": {
+    "placeholders": {
+      "count": {}
+    }
+  },
+
+  "test_select": "Testing selects: {type, select, dark{dark}, light{light}} for theme mode.",
+  "@test_select": {
+    "placeholders": {
+      "type": {}
     }
   },
 
