--- a/packages/_presentation_layer/lib/src/l10n/app_pt.arb
+++ b/packages/_presentation_layer/lib/src/l10n/app_pt.arb
@@ -11,6 +11,7 @@
   "title_project_configuration_drawer": "Configurar Projeto",
   "title_preferences_drawer": "Preferencias",
   "title_resources_drawer": "Recursos",
+  "title_change_control_drawer": "Alterações",
   "title_help_drawer": "Sobre",
   "title_load_project": "Carregando projeto",
   "label_close_project": "Fechar Projeto",
