Code review for flutter upgrades

--- a/packages/_domain_layer/lib/src/l10n/domain_en.arb
+++ b/packages/_domain_layer/lib/src/l10n/domain_en.arb
@@ -1,7 +1,7 @@
 {
   "@@locale": "en",
 
-  "label_display_option": "{option, select, compact{Compact} expanded{Expanded}}",
+  "label_display_option": "{option, select, compact{Compact} other{Expanded}}",
   "@label_display_option": {
     "placeholders": {
       "option": {}
